fixed line gradient overflow and navbar position

--- a/styles.css
+++ b/styles.css
@@ -99,9 +99,6 @@ body {
 }
 .nav__links--cancle,
 .nav__links--menubar {
-  position: absolute;
-  top: 40px;
-  right: 30px;
   cursor: pointer;
   z-index: var(--z-index-2);
 }
@@ -123,6 +120,7 @@ body {
 .main {
   max-width: 100%;
   padding-inline: 16px;
+  overflow-x: hidden;
 }
 /* ----------Hero ---------- */
 .hero {
@@ -216,7 +214,7 @@ body {
   flex-direction: column;
   align-items: center;
   gap: var(--spacing-lg);
-  padding-block: var(--spacing-xl);
+  padding-block: var(--spacing-lg);
   position: relative;
 }
 .crown__banner,
